test/preprocessor/invalid/error.glsl
#error This is 1u 333.0 error message # ## @